refactor: wrap source code interface with SourceCode.

--- a/data/_config/language/c.yaml
+++ b/data/_config/language/c.yaml
@@ -1,5 +1,5 @@
 name: C
-extensions: [c]
+extensions: [.c]
 line_comment: //.*
 block_comment: /\*.*\*/
 quoting: '"(?:[^"\\]|\\.)*"|''([^''\\]|\\.)'''
