--- a/data/_config/language/java.yaml
+++ b/data/_config/language/java.yaml
@@ -1,5 +1,5 @@
 name: Java
-extensions: [java]
+extensions: [.java]
 line_comment: //.*
 block_comment: /\*.*\*/
 quoting: '"(?:[^"\\]|\\.)*"|''([^''\\]|\\.)'''
