--- a/data/_config/language/python.yaml
+++ b/data/_config/language/python.yaml
@@ -1,5 +1,5 @@
 name: Python
-extensions: [py]
+extensions: [.py]
 line_comment: '#.*'
 quoting: r?(\"{1,3}|\'{1,3})([^\1\\]*?(\\.[^\1\\]*?)*?)\1
 keywords: ['False', None, 'True', and, as, assert, break,
