--- a/data/_config/language/scala.yaml
+++ b/data/_config/language/scala.yaml
@@ -1,6 +1,6 @@
 name: Scala
 extensions: [.scala]
-line_comment: //.*
+line_comment: //.*?
 block_comment: /\*.*\*/
 quoting: '"(?:[^"\\]|\\.)*"|''([^''\\]|\\.)'''
 keywords: [abstract, case, catch, class, def, do, else,
