--- a/data/_config/language/javascript.yaml
+++ b/data/_config/language/javascript.yaml
@@ -1,6 +1,6 @@
 name: JavaScript
 extensions: [.js]
-line_comment: //.*
+line_comment: //.*?
 block_comment: /\*.*\*/
 quoting: (\"|\')([^\1\\]*?(\\.[^\1\\]*?)*?)\1
 keywords: [abstract, arguments, boolean, break, byte,
