--- a/data/_config/language/python.yaml
+++ b/data/_config/language/python.yaml
@@ -1,6 +1,6 @@
 name: Python
 extensions: [.py]
-line_comment: '#.*'
+line_comment: '#.*?'
 quoting: r?(\"{1,3}|\'{1,3})([^\1\\]*?(\\.[^\1\\]*?)*?)\1
 keywords: ['False', None, 'True', and, as, assert, break,
   class, continue, def, del, elif, else, except, finally,
