--- a/data/_config/language/ruby.yaml
+++ b/data/_config/language/ruby.yaml
@@ -1,6 +1,6 @@
 name: Ruby
 extensions: [.rb]
-line_comment: '#.*'
+line_comment: '#.*?'
 quoting: (\"|\')([^\1\\]*?(\\.[^\1\\]*?)*?)\1
 keywords: [__ENCODING__, __LINE__, __FILE__, BEGIN,
   END, alias, and, begin, break, case, class, def, 'defined?',
